--- a/Tools/Tools.html
+++ b/Tools/Tools.html
@@ -88,12 +88,12 @@
   <div class="section">
     <h2>🔐 Web Application Security Testing</h2>
     <ul>
-      <li><a href="https://portswigger.net/burp">Burp Suite</a> – Web app testing</li>
-      <li><a href="https://www.acunetix.com/">Acunetix</a> – Vulnerability scanning</li>
-      <li><a href="https://github.com/FortyNorthSecurity/EyeWitness">EyeWitness</a> – Web screenshots</li>
-      <li><a href="https://github.com/MehediH/Mantra">Mantra</a> – Web app testing</li>
-      <li><a href="https://www.zaproxy.org/">OWASP ZAP</a> – Web vulnerability scanner</li>
-      <li><a href="https://github.com/EnableSecurity/wafw00f">Wafw00f</a> – WAF detection</li>
+      <li><a href="https://portswigger.net/burp">Burp Suite</a> – Comprehensive platform for web vulnerability scanning and penetration testing, includes proxy, repeater, intruder, and more.</li>
+      <li><a href="https://www.acunetix.com/">Acunetix</a> – Automated scanner for web apps to detect over 7,000 vulnerabilities including SQLi, XSS.</li>
+      <li><a href="https://github.com/FortyNorthSecurity/EyeWitness">EyeWitness</a> – Tool for capturing screenshots of websites, collecting server header info and technologies.</li>
+      <li><a href="https://github.com/MehediH/Mantra">Mantra</a> – Browser-based security testing framework with pre-loaded extensions for testing.</li>
+      <li><a href="https://www.zaproxy.org/">OWASP ZAP</a> – Open-source web application security scanner, suitable for both beginners and pros.</li>
+      <li><a href="https://github.com/EnableSecurity/wafw00f">Wafw00f</a> – Detects and identifies Web Application Firewalls (WAFs) in front of web apps.</li>
     </ul>
   </div>
 
@@ -101,16 +101,16 @@
   <div class="section">
     <h2>🌐 Network Scanning and Discovery</h2>
     <ul>
-      <li><a href="https://nmap.org/">Nmap</a> – Network scanning</li>
-      <li><a href="https://chaos.projectdiscovery.io/">Chaos Project Discovery</a> – Recon and OSINT</li>
-      <li><a href="https://github.com/owasp-amass/amass">Amass</a> – Domain enumeration</li>
-      <li><a href="https://github.com/projectdiscovery/httpx">httpx</a> – HTTP probing</li>
-      <li><a href="https://github.com/robertdavidgraham/masscan">Masscan</a> – Fast scanner</li>
-      <li><a href="https://github.com/RustScan/RustScan">Rustscan</a> – Low-resource scanner</li>
-      <li><a href="https://angryip.org/">Angry IP Scanner</a> – Simple IP scanner</li>
-      <li><a href="https://github.com/projectdiscovery/naabu">Naabu</a> – Port scanning</li>
-      <li><a href="https://github.com/projectdiscovery/dnsx">Dnsx</a> – DNS recon</li>
-      <li><a href="https://www.wireshark.org/">Wireshark</a> – Packet inspection</li>
+      <li><a href="https://nmap.org/">Nmap</a> – Industry standard for port scanning, service fingerprinting, and OS detection.</li>
+      <li><a href="https://chaos.projectdiscovery.io/">Chaos Project Discovery</a> – Large-scale internet scanning and reconnaissance datasets for OSINT.</li>
+      <li><a href="https://github.com/owasp-amass/amass">Amass</a> – Performs DNS enumeration, network mapping, and attack surface discovery.</li>
+      <li><a href="https://github.com/projectdiscovery/httpx">httpx</a> – Fast HTTP probing with support for GET, POST, and TLS detection.</li>
+      <li><a href="https://github.com/robertdavidgraham/masscan">Masscan</a> – Ultra-fast port scanner, capable of scanning entire internet in minutes.</li>
+      <li><a href="https://github.com/RustScan/RustScan">Rustscan</a> – Blazingly fast port scanner with modern UI and Nmap integration.</li>
+      <li><a href="https://angryip.org/">Angry IP Scanner</a> – Simple and fast IP address and port scanner for all OSes.</li>
+      <li><a href="https://github.com/projectdiscovery/naabu">Naabu</a> – Lightweight and fast port scanner focusing on security testing.</li>
+      <li><a href="https://github.com/projectdiscovery/dnsx">Dnsx</a> – Lightweight and fast port scanner focusing on security testing.</li>
+      <li><a href="https://www.wireshark.org/">Wireshark</a> – Network protocol analyzer for deep packet inspection and live traffic analysis.</li>
     </ul>
   </div>
 
@@ -118,12 +118,12 @@
   <div class="section">
     <h2>🏷️ Subdomain Discovery</h2>
     <ul>
-      <li><a href="https://github.com/projectdiscovery/subfinder">Subfinder</a></li>
-      <li><a href="https://github.com/projectdiscovery/shuffledns">Shuffledns</a></li>
-      <li><a href="https://github.com/LukaSikic/subzy">Subzy</a></li>
-      <li><a href="https://github.com/abhyudaya/subzack">Subzack</a></li>
-      <li><a href="https://github.com/lc/subjs">Subjs</a></li>
-      <li><a href="https://github.com/tomnomnom/assetfinder">Assetfinder</a></li>
+      <li><a href="https://github.com/projectdiscovery/subfinder">Subfinder</a> – Fast passive subdomain enumeration using multiple sources.</li>
+      <li><a href="https://github.com/projectdiscovery/shuffledns">Shuffledns</a> – High-performance DNS brute-forcing tool using massdns.</li>
+      <li><a href="https://github.com/LukaSikic/subzy">Subzy</a> – Checks for subdomain takeover vulnerabilities.</li>
+      <li><a href="https://github.com/abhyudaya/subzack">Subzack</a> – Lightweight subdomain discovery tool using shuffledns and APIs.</li>
+      <li><a href="https://github.com/lc/subjs">Subjs</a> – Collects JavaScript files from subdomains for further analysis.</li>
+      <li><a href="https://github.com/tomnomnom/assetfinder">Assetfinder</a> – Searches for subdomains and assets related to a given domain.</li>
     </ul>
   </div>
 
@@ -131,9 +131,9 @@
   <div class="section">
     <h2>🐙 GitHub Recon</h2>
     <ul>
-      <li><a href="https://github.com/arthaud/git-dumper">GitDocker</a></li>
-      <li><a href="https://github.com/hisxo/gitGraber">GitGrabber</a></li>
-      <li><a href="https://github.com/trufflesecurity/trufflehog">TruffleHog</a></li>
+      <li><a href="https://github.com/arthaud/git-dumper">GitDocker</a> – Dumps .git directories from exposed repositories.</li>
+      <li><a href="https://github.com/hisxo/gitGraber">GitGrabber</a> – Monitors GitHub for sensitive info such as keys, tokens.</li>
+      <li><a href="https://github.com/trufflesecurity/trufflehog">TruffleHog</a> – Scans repos for secrets and sensitive keys using entropy and regex checks.</li>
     </ul>
   </div>
 
@@ -141,8 +141,8 @@
   <div class="section">
     <h2>☁️ Get Leaked Buckets</h2>
     <ul>
-      <li><a href="https://github.com/nahamsec/lazys3">Lazys3</a></li>
-      <li><a href="https://github.com/sa7mon/S3Scanner">S3scanner</a></li>
+      <li><a href="https://github.com/nahamsec/lazys3">Lazys3</a> – Bruteforces S3 buckets using permutations of domain names.</li>
+      <li><a href="https://github.com/sa7mon/S3Scanner">S3scanner</a> – Scans for open Amazon S3 buckets and lists their contents.</li>
     </ul>
   </div>
 
@@ -150,11 +150,11 @@
   <div class="section">
     <h2>🧪 Vulnerability Testing</h2>
     <ul>
-      <li><a href="https://github.com/sqlmapproject/sqlmap">SQLMap</a></li>
-      <li><a href="https://github.com/projectdiscovery/nuclei">Nuclei</a></li>
-      <li><a href="https://github.com/offensive-security/exploitdb">Searchsploit</a></li>
-      <li><a href="https://xsshunter.com/">XSSHunter</a></li>
-      <li><a href="https://www.metasploit.com/">Metasploit</a></li>
+      <li><a href="https://github.com/sqlmapproject/sqlmap">SQLMap</a> – Automated tool for detecting and exploiting SQL injection flaws.</li>
+      <li><a href="https://github.com/projectdiscovery/nuclei">Nuclei</a> – Customizable vulnerability scanner using templated YAML format.</li>
+      <li><a href="https://github.com/offensive-security/exploitdb">Searchsploit</a> – Command-line tool for accessing Exploit-DB offline.</li>
+      <li><a href="https://xsshunter.com/">XSSHunter</a> – Automates detection and exploitation of out-of-band XSS vulnerabilities.</li>
+      <li><a href="https://www.metasploit.com/">Metasploit</a> – Powerful exploitation framework for developing and executing payloads.</li>
     </ul>
   </div>
 
@@ -162,8 +162,8 @@
   <div class="section">
     <h2>🔓 Password Cracking</h2>
     <ul>
-      <li><a href="https://hashcat.net/hashcat/">Hashcat</a></li>
-      <li><a href="https://www.openwall.com/john/">John the Ripper</a></li>
+      <li><a href="https://hashcat.net/hashcat/">Hashcat</a> – Advanced password recovery tool supporting GPU acceleration.</li>
+      <li><a href="https://www.openwall.com/john/">John the Ripper</a> – Classic password cracking tool supporting a wide variety of hash types.</li>
     </ul>
   </div>
 
@@ -171,17 +171,17 @@
   <div class="section">
     <h2>🔍 Information Gathering</h2>
     <ul>
-      <li><a href="https://github.com/devanshbatham/paramspider">Paramspider</a></li>
-      <li><a href="https://crt.sh/">crt.sh</a></li>
-      <li><a href="https://github.com/devanshbatham/OpenRedireX">Oeforall</a></li>
-      <li><a href="https://search.arin.net/rdap/">ARIN WHOIS</a></li>
-      <li><a href="https://bgp.he.net/">BGP He</a></li>
-      <li><a href="https://viewdns.info/">ViewDNS.info</a></li>
-      <li><a href="https://www.whoxy.com/">WhoXY</a></li>
-      <li><a href="https://mxtoolbox.com/">MXToolbox</a></li>
-      <li><a href="https://who.is/">Who.is</a></li>
-      <li><a href="https://lopseg.com.br/tools/">Lopseg</a></li>
-      <li><a href="https://ipaddressguide.com/cidr">IP Address Guide</a></li>
+      <li><a href="https://github.com/devanshbatham/paramspider">Paramspider</a> – Crawls for URL parameters useful for testing.</li>
+      <li><a href="https://crt.sh/">crt.sh</a> – Search engine for certificate transparency logs to find subdomains.</li>
+      <li><a href="https://github.com/devanshbatham/OpenRedireX">OpenRedireX</a> – Finds open redirect vulnerabilities.</li>
+      <li><a href="https://search.arin.net/rdap/">ARIN WHOIS</a> – Provides registration details of IPs and ASNs.</li>
+      <li><a href="https://bgp.he.net/">BGP He</a> – BGP routing data lookup by ASN, domain, or IP.</li>
+      <li><a href="https://viewdns.info/">ViewDNS.info</a> – Aggregates DNS and IP lookup tools.</li>
+      <li><a href="https://www.whoxy.com/">WhoXY</a> – WHOIS API with historical data and contact info.</li>
+      <li><a href="https://mxtoolbox.com/">MXToolbox</a> – DNS, MX, blacklist, and email tools in one.</li>
+      <li><a href="https://who.is/">Who.is</a> – Simple WHOIS lookup with registrar info.</li>
+      <li><a href="https://lopseg.com.br/tools/">Lopseg</a> – WHOIS, ASN, IP and DNS tools.</li>
+      <li><a href="https://ipaddressguide.com/cidr">IP Address Guide</a> – CIDR calculator and subnetting helper.</li>
     </ul>
   </div>
 
@@ -189,7 +189,7 @@
   <div class="section">
     <h2>💥 Fuzzing</h2>
     <ul>
-      <li><a href="https://github.com/ffuf/ffuf">ffuf</a></li>
+      <li><a href="https://github.com/ffuf/ffuf">ffuf</a> – Fast web fuzzer written in Go, ideal for directory and parameter brute-forcing.</li>
     </ul>
   </div>
 
@@ -197,7 +197,7 @@
   <div class="section">
     <h2>🧬 Sensitive Data Discovery</h2>
     <ul>
-      <li><a href="https://github.com/m4ll0k/SecretFinder">Secret Finder</a></li>
+      <li><a href="https://github.com/m4ll0k/SecretFinder">Secret Finder</a> – Detects sensitive tokens in JavaScript files during recon.</li>
     </ul>
   </div>
 
@@ -205,8 +205,8 @@
   <div class="section">
     <h2>🤖 Automation and Recon</h2>
     <ul>
-      <li><a href="https://github.com/projectdiscovery/katana">Katana</a></li>
-      <li><a href="https://github.com/six2dez/reconftw">ReconFTW</a></li>
+      <li><a href="https://github.com/projectdiscovery/katana">Katana</a> – Next-gen crawling and spidering tool supporting JS parsing.</li>
+      <li><a href="https://github.com/six2dez/reconftw">ReconFTW</a> – Automated, all-in-one recon suite using multiple tools and APIs.</li>
     </ul>
   </div>
 
@@ -214,7 +214,7 @@
   <div class="section">
     <h2>🔗 Link Testing</h2>
     <ul>
-      <li><a href="https://www.deadlinkchecker.com/">Broken Link Checker</a></li>
+      <li><a href="https://www.deadlinkchecker.com/">Broken Link Checker</a> – Online tool for finding broken or dead links on websites.</li>
     </ul>
   </div>
 
@@ -222,8 +222,8 @@
   <div class="section">
     <h2>🛰️ ASN and CIDR Mapping</h2>
     <ul>
-      <li><a href="https://github.com/projectdiscovery/asnmap">Asnmap</a></li>
-      <li><a href="https://github.com/projectdiscovery/mapcidr">Mapcidr</a></li>
+      <li><a href="https://github.com/projectdiscovery/asnmap">Asnmap</a> – Maps ASN to IP ranges for better asset enumeration.</li>
+      <li><a href="https://github.com/projectdiscovery/mapcidr">Mapcidr</a> – Processes CIDR ranges for inclusion/exclusion in scanning.</li>
     </ul>
   </div>
 
@@ -231,11 +231,11 @@
   <div class="section">
     <h2>🛡️ Defensive Security Tools</h2>
     <ul>
-      <li><a href="https://www.ossec.net/">OSSEC</a></li>
-      <li><a href="https://suricata.io/">Suricata</a></li>
-      <li><a href="https://www.snort.org/">Snort</a></li>
-      <li><a href="https://wazuh.com/">Wazuh</a></li>
-      <li><a href="https://securityonion.net/">Security Onion</a></li>
+      <li><a href="https://www.ossec.net/">OSSEC</a> – Open-source HIDS for log analysis and threat detection.</li>
+      <li><a href="https://suricata.io/">Suricata</a> – High-performance NIDS/NIPS with advanced traffic analysis.</li>
+      <li><a href="https://www.snort.org/">Snort</a> – Popular real-time packet sniffer and intrusion detection engine.</li>
+      <li><a href="https://wazuh.com/">Wazuh</a> – Full-featured security monitoring and threat detection platform.</li>
+      <li><a href="https://securityonion.net/">Security Onion</a> – Linux distro for blue teaming with full packet capture and IDS integration.</li>
     </ul>
   </div>
 
@@ -243,11 +243,11 @@
   <div class="section">
     <h2>💾 Forensics & Memory Analysis</h2>
     <ul>
-      <li><a href="https://github.com/volatilityfoundation/volatility">Volatility</a></li>
-      <li><a href="https://www.sleuthkit.org/autopsy/">Autopsy</a></li>
-      <li><a href="https://github.com/ReFirmLabs/binwalk">Binwalk</a></li>
-      <li><a href="https://www.fireeye.com/services/freeware/redline.html">Redline</a></li>
-      <li><a href="https://exiftool.org/">ExifTool</a></li>
+      <li><a href="https://github.com/volatilityfoundation/volatility">Volatility</a> – Framework for analyzing memory dumps.</li>
+      <li><a href="https://www.sleuthkit.org/autopsy/">Autopsy</a> – GUI-based digital forensic tool supporting many file systems.</li>
+      <li><a href="https://github.com/ReFirmLabs/binwalk">Binwalk</a> – Firmware reverse engineering tool for extracting embedded files.</li>
+      <li><a href="https://www.fireeye.com/services/freeware/redline.html">Redline</a> – Host investigation tool to collect and analyze memory.</li>
+      <li><a href="https://exiftool.org/">ExifTool</a> – Reads, writes, and edits metadata in image and document files.</li>
     </ul>
   </div>
 
@@ -255,10 +255,10 @@
   <div class="section">
     <h2>🎭 Payload Generation & Obfuscation</h2>
     <ul>
-      <li><a href="https://docs.metasploit.com/docs/using-metasploit/msfvenom.html">MSFvenom</a></li>
-      <li><a href="https://github.com/Veil-Framework/Veil">Veil</a></li>
-      <li><a href="https://github.com/Screetsec/TheFatRat">TheFatRat</a></li>
-      <li><a href="https://www.shellterproject.com/">Shellter</a></li>
+      <li><a href="https://docs.metasploit.com/docs/using-metasploit/msfvenom.html">MSFvenom</a> – Payload generation utility from Metasploit.</li>
+      <li><a href="https://github.com/Veil-Framework/Veil">Veil</a> – Obfuscates payloads to bypass AV detection.</li>
+      <li><a href="https://github.com/Screetsec/TheFatRat">TheFatRat</a> – Automated backdoor generator and AV evasion toolkit.</li>
+      <li><a href="https://www.shellterproject.com/">Shellter</a> – Dynamic shellcode injector for PE files.</li>
     </ul>
   </div>
 
@@ -266,11 +266,11 @@
   <div class="section">
     <h2>🕵️ OSINT Tools</h2>
     <ul>
-      <li><a href="https://github.com/laramies/theHarvester">theHarvester</a></li>
-      <li><a href="https://www.maltego.com/">Maltego</a></li>
-      <li><a href="https://github.com/smicallef/spiderfoot">Spiderfoot</a></li>
-      <li><a href="https://github.com/lanmaster53/recon-ng">Recon-ng</a></li>
-      <li><a href="https://github.com/sherlock-project/sherlock">Sherlock</a></li>
+      <li><a href="https://github.com/laramies/theHarvester">theHarvester</a> – Collects emails, domains, names from search engines and PGP.</li>
+      <li><a href="https://www.maltego.com/">Maltego</a> – Graph-based OSINT tool for mapping relationships between people, groups, and infrastructure.</li>
+      <li><a href="https://github.com/smicallef/spiderfoot">Spiderfoot</a> – OSINT automation with hundreds of modules and integration options.</li>
+      <li><a href="https://github.com/lanmaster53/recon-ng">Recon-ng</a> – Modular web reconnaissance framework with CLI.</li>
+      <li><a href="https://github.com/sherlock-project/sherlock">Sherlock</a> – Hunts down usernames across many social platforms.</li>
     </ul>
   </div>
 
@@ -278,9 +278,9 @@
   <div class="section">
     <h2>📱 Mobile Security Testing</h2>
     <ul>
-      <li><a href="https://github.com/MobSF/Mobile-Security-Framework-MobSF">MobSF</a></li>
-      <li><a href="https://frida.re/">Frida</a></li>
-      <li><a href="https://github.com/sensepost/objection">Objection</a></li>
+      <li><a href="https://github.com/MobSF/Mobile-Security-Framework-MobSF">MobSF</a> – Static and dynamic analysis for Android/iOS apps.</li>
+      <li><a href="https://frida.re/">Frida</a> – Dynamic instrumentation toolkit for tracing and tampering with mobile apps.</li>
+      <li><a href="https://github.com/sensepost/objection">Objection</a> – Runtime mobile exploration, based on Frida, useful for bypassing jailbreak/root detection.</li>
     </ul>
   </div>
 
@@ -288,9 +288,9 @@
   <div class="section">
     <h2>🧠 Wordlists & Dictionaries</h2>
     <ul>
-      <li><a href="https://github.com/danielmiessler/SecLists">SecLists</a></li>
-      <li><a href="https://github.com/fuzzdb-project/fuzzdb">FuzzDB</a></li>
-      <li><a href="https://github.com/brannondorsey/naive-hashcat/releases">RockYou.txt</a></li>
+      <li><a href="https://github.com/danielmiessler/SecLists">SecLists</a> – Collection of multiple wordlists for usernames, passwords, fuzzing, etc.</li>
+      <li><a href="https://github.com/fuzzdb-project/fuzzdb">FuzzDB</a> – Attack payloads, predictable resource names, and regexes for testing.</li>
+      <li><a href="https://github.com/brannondorsey/naive-hashcat/releases">RockYou.txt</a> – Classic and widely-used password wordlist.</li>
     </ul>
   </div>
 
@@ -298,10 +298,10 @@
   <div class="section">
     <h2>🧰 Useful Utilities</h2>
     <ul>
-      <li><a href="https://gchq.github.io/CyberChef/">CyberChef</a></li>
-      <li><a href="https://www.base64decode.org/">Base64 Decode</a></li>
-      <li><a href="https://dnsdumpster.com/">DnsDumpster</a></li>
-      <li><a href="https://haveibeenpwned.com/">HaveIBeenPwned</a></li>
+      <li><a href="https://gchq.github.io/CyberChef/">CyberChef</a> – "The Cyber Swiss Army Knife" – for encoding, decoding, encryption, etc.</li>
+      <li><a href="https://www.base64decode.org/">Base64 Decode</a> – Simple web-based Base64 encode/decode utility.</li>
+      <li><a href="https://dnsdumpster.com/">DnsDumpster</a> – Visual DNS recon tool for mapping a domain’s network.</li>
+      <li><a href="https://haveibeenpwned.com/">HaveIBeenPwned</a> – Check if your email or credentials have been compromised in breaches.</li>
     </ul>
   </div>
 
