--- a/index.html
+++ b/index.html
@@ -1,26 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Welcome</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            text-align: center;
-            padding-top: 100px;
-        }
-        h1 {
-            color: #333;
-        }
-        p {
-            font-size: 18px;
-            color: #777;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Cybersecurity Vault</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Roboto Mono', monospace;
+      background-color: #0f0f0f;
+      color: #f1f1f1;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #111;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 1px solid #333;
+    }
+    nav a {
+      color: #00ffc8;
+      margin-left: 1rem;
+      text-decoration: none;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    .hero {
+      text-align: center;
+      padding: 4rem 2rem;
+    }
+    .hero h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+    .hero p {
+      font-size: 1.2rem;
+      color: #ccc;
+    }
+    .section {
+      padding: 2rem;
+      border-top: 1px solid #222;
+    }
+    .section h2 {
+      color: #00ffc8;
+      margin-bottom: 1rem;
+    }
+    .tool-list {
+      list-style: none;
+      padding: 0;
+    }
+    .tool-list li {
+      margin: 0.5rem 0;
+    }
+    .tool-list a {
+      color: #f1f1f1;
+      text-decoration: none;
+    }
+    .tool-list a:hover {
+      color: #00ffc8;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background: #111;
+      border-top: 1px solid #333;
+      font-size: 0.9rem;
+      color: #666;
+    }
+  </style>
 </head>
 <body>
-    <h1>Welcome</h1>
-    <p>Work in Progress</p>
+  <header>
+    <div class="logo"><strong>Cybersecurity Vault</strong></div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="Tools.html">Tools</a>
+      <a href="Subdomain-Takeover.html">Takeovers</a>
+      <a href="https://github.com/luci-a-u/Vault" target="_blank">GitHub</a>
+    </nav>
+  </header>
+
+  <div class="hero">
+    <h1>Welcome to the Cybersecurity Vault</h1>
+    <p>A curated collection of real-world tools and techniques for security testing and ethical hacking.</p>
+  </div>
+
+  <div class="section">
+    <h2>Featured Sections</h2>
+    <ul class="tool-list">
+      <li><a href="Tools.html">🛠 Tools Used in Real-World Pentests</a></li>
+      <li><a href="Subdomain-Takeover.html">🌐 Subdomain Takeover Techniques</a></li>
+    </ul>
+  </div>
+
+  <footer>
+    &copy; 2025 luci-a-u | Hosted on GitHub Pages
+  </footer>
 </body>
 </html>
