--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
     <div class="logo"><strong>Cybersecurity Vault</strong></div>
     <nav>
       <a href="index.html">Home</a>
-      <a href="Tools.html">Tools</a>
+      <a href="Tools/Tools.html">Tools</a>
+      <a href="Payloads/Payloads.html">Payloads</a>
       <a href="Subdomain-Takeover.html">Takeovers</a>
       <a href="https://github.com/luci-a-u/Vault" target="_blank">GitHub</a>
     </nav>
@@ -92,7 +93,7 @@
   <div class="section">
     <h2>Featured Sections</h2>
     <ul class="tool-list">
-      <li><a href="Tools.html">🛠 Tools Used in Real-World Pentests</a></li>
+      <li><a href="Tools/Tools.html">🛠 Tools Used in Real-World Pentests</a></li>
       <li><a href="Subdomain-Takeover.html">🌐 Subdomain Takeover Techniques</a></li>
     </ul>
   </div>
