--- a/Subdomain-Takeover.html
+++ b/Subdomain-Takeover.html
@@ -78,12 +78,12 @@
     <p>This subdomain is currently under a responsible takeover by a security researcher. If you are the owner, please address the misconfiguration to reclaim it.</p>
     <div class="details">
         <p><strong>Researcher Name:</strong> Aman Singh</p>
-        <p><strong>HackerOne Profile:</strong> <a href="https://hackerone.com/luci_a_u" target="_blank">hackerone.com/luci_a_u</a></p>
-        <p><strong>Twitter:</strong> <a href="https://x.com/luci_a_u" target="_blank">x.com/luci_a_u</a></p>
-        <p><strong>Email:</strong> knowledgehub0o0oo0@gmail.com</p>
-        <p><strong>Phone:</strong> +91 94243 39792</p>
-        <p><strong>Country:</strong> India</p>
         <p><strong>Role:</strong> Bug Hunter at HackerOne</p>
+        <p><strong>Email:</strong> knowledgehub0o0oo0@gmail.com</p>
+        <p><strong>Linkedin:</strong> <a href="https://www.linkedin.com/in/lucifer-a-u/" target="_blank">hackerone.com/luci_a_u</a></p>
+        <p><strong>HackerOne:</strong> <a href="https://hackerone.com/luci_a_u" target="_blank">hackerone.com/luci_a_u</a></p>
+        <p><strong>Twitter:</strong> <a href="https://x.com/luci_a_u" target="_blank">x.com/luci_a_u</a></p>
+        <p><strong>Country:</strong> India</p>
     </div>
     <div class="cta">
         <a href="https://example.com/contact" target="_blank">Contact to Resolve</a>
