--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
       <h2>Featured Sections</h2>
       <ul>
         <li>🛠 <a href="Tools/Tools.html">Tools Used in Real-World Pentests</a></li>
-        <li>🌐 <a href="Subdomain-Takeover/Subdomain-Takeover.html">Subdomain Takeover Techniques</a></li>
-        <li>💣 <a href="Payloads.html">Payload Arsenal</a></li>
+        <li>🌐 <a href="Subdomain-Takeover.html">Subdomain Takeover POC</a></li>
+        <li>💣 <a href="Payloads/Payloads.html">Payload Arsenal</a></li>
       </ul>
     </section>
 
